--- a/src/App.css
+++ b/src/App.css
@@ -4,375 +4,185 @@ Variables
 ===============
 */
 
-:root {
-  /* dark shades of primary color*/
-  --clr-primary-1: hsl(205, 86%, 17%);
-  --clr-primary-2: hsl(205, 77%, 27%);
-  --clr-primary-3: hsl(205, 72%, 37%);
-  --clr-primary-4: hsl(205, 63%, 48%);
-  /* primary/main color */
-  --clr-primary-5: hsl(205, 78%, 60%);
-  /* lighter shades of primary color */
-  --clr-primary-6: hsl(205, 89%, 70%);
-  --clr-primary-7: hsl(205, 90%, 76%);
-  --clr-primary-8: hsl(205, 86%, 81%);
-  --clr-primary-9: hsl(205, 90%, 88%);
-  --clr-primary-10: hsl(205, 100%, 96%);
-  /* darkest grey - used for headings */
-  --clr-grey-1: hsl(209, 61%, 16%);
-  --clr-grey-2: hsl(211, 39%, 23%);
-  --clr-grey-3: hsl(209, 34%, 30%);
-  --clr-grey-4: hsl(209, 28%, 39%);
-  /* grey used for paragraphs */
-  --clr-grey-5: hsl(210, 22%, 49%);
-  --clr-grey-6: hsl(209, 23%, 60%);
-  --clr-grey-7: hsl(211, 27%, 70%);
-  --clr-grey-8: hsl(210, 31%, 80%);
-  --clr-grey-9: hsl(212, 33%, 89%);
-  --clr-grey-10: hsl(210, 36%, 96%);
-  --clr-white: #fff;
-  --clr-red-dark: hsl(360, 67%, 44%);
-  --clr-red-light: hsl(360, 71%, 66%);
-  --clr-green-dark: hsl(125, 67%, 44%);
-  --clr-green-light: hsl(125, 71%, 66%);
-  --clr-black: #222;
-  --transition: all 0.3s linear;
-  --spacing: 0.1rem;
-  --radius: 0.25rem;
-  --light-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
-  --dark-shadow: 0 5px 15px rgba(0, 0, 0, 0.4);
-  --max-width: 1170px;
-  --fixed-width: 450px;
-  --clr-orange-1: hsl(12, 83%, 98%);
-  --clr-orange-2: hsl(14, 91%, 95%);
-  --clr-orange-3: hsl(12, 89%, 89%);
-  --clr-orange-4: hsl(13, 87%, 82%);
-  --clr-orange-5: hsl(13, 88%, 68%);
-  --clr-orange-6: hsl(13, 88%, 55%);
-  --clr-orange-7: hsl(13, 74%, 49%);
-  --clr-orange-8: hsl(13, 74%, 33%);
-  --clr-orange-9: hsl(13, 73%, 25%);
-  --clr-orange-10: hsl(13, 73%, 16%);
-}
-/*
-=============== 
-Global Styles
-===============
-*/
-
-*,
-::after,
-::before {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  background: var(--clr-grey-10);
-  color: var(--clr-grey-1);
-  line-height: 1.5;
-  font-size: 0.875rem;
-}
-ul {
-  list-style-type: none;
-}
-a {
-  text-decoration: none;
-}
-h1,
-h2,
-h3,
-h4 {
-  letter-spacing: var(--spacing);
-  text-transform: capitalize;
-  line-height: 1.25;
-  margin-bottom: 0.75rem;
-}
-h1 {
-  font-size: 3rem;
-}
-h2 {
-  font-size: 2rem;
-}
-h3 {
-  font-size: 1.25rem;
-}
-h4 {
-  font-size: 0.875rem;
-}
-p {
-  margin-bottom: 1.25rem;
-  color: var(--clr-grey-5);
-}
-@media screen and (min-width: 800px) {
-  h1 {
-    font-size: 4rem;
-  }
-  h2 {
-    font-size: 2.5rem;
-  }
-  h3 {
-    font-size: 1.75rem;
-  }
-  h4 {
-    font-size: 1rem;
-  }
-  body {
-    font-size: 1rem;
-  }
-  h1,
-  h2,
-  h3,
-  h4 {
-    line-height: 1;
-  }
-}
-/*  global classes */
-
-/* section */
-.section,
-.container {
-  width: 90vw;
-  margin: 0 auto;
-  max-width: var(--max-width);
-}
-
-@media screen and (min-width: 992px) {
-  .section {
-    width: 95vw;
-  }
-}
-
-.container {
+.App {
   text-align: center;
-  margin-top: 5rem;
+  max-width: 728px;
+  margin: 0 auto;
+  max-height: 528px;
 }
-.btn {
-  display: inline-block;
-  background: var(--clr-primary-5);
-  color: var(--clr-white);
-  padding: 0.25rem 0.75rem;
-  border-radius: var(--radius);
-  border-color: transparent;
-  text-transform: capitalize;
-  font-size: 1rem;
-  letter-spacing: var(--spacing);
-  margin-top: 2rem;
-  margin-left: 0.5rem;
-  margin-right: 0.5rem;
-  cursor: pointer;
-  transition: var(--transition);
-}
-.btn:hover {
-  background: var(--clr-primary-1);
-  color: var(--clr-primary-5);
-}
-.item {
-  background: var(--clr-white);
+
+.App header {
+  background-color: #243447;
+  border-style: none none groove;
+  border-color: #1e1e24;
+  height: 4vh;
+  color: white;
+  font-weight: bold;
+  position: relative;
+  width: 100%;
+  max-height: 528px;
+  max-width: 728px;
+  top: 0;
   display: flex;
+  align-items: center;
   justify-content: space-between;
-  min-width: 1400px;
-  max-width: fit-content;
-  margin: 2rem auto;
-  align-items: center;
-  border-radius: var(--radius);
-}
-.item button,
-.item a {
-  background: transparent;
-  border-color: transparent;
-  color: var(--clr-primary-5);
-  letter-spacing: var(--spacing);
-  cursor: pointer;
-}
-.item {
-  padding: 1rem 2rem;
-}
-.item h4 {
-  margin-bottom: 0;
-}
-.item p {
-  margin-bottom: 0;
-}
-.modal {
-  position: absolute;
-  top: 2rem;
-  left: 50%;
-  transform: translateX(-50%);
-  background: var(--clr-white);
-  display: inline-block;
-  padding: 0.25rem 1rem;
-  border-radius: var(--radius);
-  text-transform: capitalize;
+  z-index: 99;
+  padding: 10px;
+  box-sizing: border-box;
+  border-radius: 4px 4px 0px 0px;
 }
 
-.modal p {
-  margin-bottom: 0;
-  color: var(--clr-red-dark);
-}
-.form {
-  background: var(--clr-white);
-  max-width: var(--fixed-width);
-  margin: 0 auto;
-  margin-bottom: 4rem;
-  padding: 1rem 2rem;
-  border-radius: var(--radius);
-}
-.form input {
-  background: var(--clr-grey-10);
-  border-color: transparent;
-  border-radius: var(--radius);
-  padding: 0.25rem 0.5rem;
-}
-.form-control {
-  margin: 0.5rem 0;
-  display: grid;
-  grid-template-columns: 100px 1fr;
-  align-items: center;
-}
-.form button {
-  display: inline-block;
-  background: var(--clr-black);
-  color: var(--clr-white);
-  border-color: transparent;
-  margin-top: 1rem;
-  letter-spacing: var(--spacing);
-  padding: 0.15rem 0.25rem;
-  text-transform: capitalize;
-  border-radius: var(--radius);
-  cursor: pointer;
-}
-.nav-links {
-  max-width: var(--fixed-width);
-  margin: 0 auto;
-  margin-bottom: 4rem;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-}
-.nav-links a {
-  color: var(--clr-grey-5);
-}
-.users {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  gap: 2rem;
-  margin: 3rem auto;
-}
-.users li {
-  width: 100%;
-  display: flex;
-  align-items: center;
-  background: var(--clr-white);
-  padding: 1rem 2rem;
-  border-radius: var(--radius);
-  text-align: left;
-}
-.users img {
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  margin-right: 1rem;
-}
-.users h4 {
-  margin-bottom: 0.15rem;
-}
-.users a {
-  color: var(--clr-grey-5);
-  text-transform: capitalize;
-}
-
-.products {
-  margin: 4rem 0;
-  display: grid;
-  gap: 2rem;
-}
-@media screen and (min-width: 576px) {
-  .products {
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  }
-}
-.product {
-  background: var(--clr-white);
-  border-radius: var(--radius);
-}
-.product img {
-  border-top-left-radius: var(--radius);
-  border-top-right-radius: var(--radius);
-
-  width: 100%;
-  height: 15rem;
-  object-fit: cover;
-}
-.product h4 {
-  margin-top: 1rem;
-}
-
-.product button {
-  margin-bottom: 1rem;
-  background: var(--clr-primary-5);
-  border-radius: var(--radius);
-  border-color: transparent;
-  color: var(--clr-white);
-  padding: 0.25rem 0.5rem;
-  text-transform: capitalize;
-  cursor: pointer;
-}
-
-/* .App {
+.App section {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  max-height: 628px;
+  min-height: 1vh;
+  border-radius: 0px 0px 4px 4px;
+  background-color: #243447;
 }
 
-.information {
+.Chat main {
+  padding: 10px;
+  height: 20vh;
+  margin: 1vh 0 1vh;
+  overflow-y: scroll;
   display: flex;
   flex-direction: column;
-  width: 100%;
-  align-items: center;
-  justify-content: center;
 }
-.information input {
-  width: 300px;
-  height: 30px;
-  font-size: 20px;
-  padding-left: 10px;
-  margin: 5px;
+.Chat ::-webkit-scrollbar {
+  width: 0.25rem;
 }
 
-.update input {
-  width: 180px;
-  height: 30px;
-  font-size: 20px;
-  padding-left: 10px;
-  margin: 5px;
+.Chat ::-webkit-scrollbar-track {
+  background: #1e1e24;
 }
-.information button {
-  width: 200px;
-  height: 30px;
-  margin-top: 10px;
+
+.Chat ::-webkit-scrollbar-thumb {
+  background: #c8c8c8;
 }
-.information button:hover {
-  cursor: pointer;
-}
-hr {
-  border: 0;
-  clear: both;
-  display: block;
-  width: 96%;
-  background-color: black;
-  height: 1px;
-}
-.employee {
-  width: 700px;
-  height: auto;
-  border: 1px solid black;
-  padding-left: 10px;
-  margin: 10px;
+
+form.Chat {
+  height: 6vh;
+  position: relative;
+  margin-bottom: 20px;
+  width: 100%;
   display: flex;
-  font-family: "Courier New", "Courier New", Courier, monospace;
+  font-size: 1.5rem;
 }
-.employee h3 {
-  margin: 10px;
+
+form button {
+  width: 15%;
+  margin-bottom: 20px;
+}
+
+.Chat input {
+  line-height: 2;
+  width: 85%;
+  font-size: 1rem;
+  background: white;
+  color: black;
+  outline: none;
+  border: 1;
+  border-color: black;
+  border-radius: 4px;
+  margin: 10px 0px 10px 10px;
+  padding: 0 10px;
+}
+
+/* .Chat button {
+  background-color: #000000;
+  border: none;
+  color: white;
+  margin: 10px 10px 10px 0px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  cursor: pointer;
+  font-size: 1.25rem;
+  border-radius: 4px;
+}
+
+button:disabled {
+  opacity: 0.5;
+  cursor: not-allowed;
 } */
+
+.Chat ul,
+.Chat li {
+  text-align: left;
+  list-style: none;
+}
+
+p.Chat {
+  max-width: 500px;
+  margin-bottom: 12px;
+  line-height: 24px;
+  padding: 10px 20px;
+  border-radius: 25px;
+  position: relative;
+  color: red;
+  text-align: center;
+}
+
+.message {
+  display: flex;
+  align-items: center;
+}
+
+.sent {
+  flex-direction: row-reverse;
+}
+
+.sentName {
+  flex-direction: row-reverse;
+}
+
+.sent p {
+  max-width: 500px;
+  margin-bottom: 12px;
+  line-height: 10px;
+  padding: 10px 15px;
+  border-radius: 25px;
+  position: relative;
+  color: white;
+  text-align: center;
+  background: #0b93f6;
+  align-self: flex-end;
+}
+.received p {
+  max-width: 500px;
+  margin-bottom: 12px;
+  line-height: 10px;
+  padding: 10px 15px;
+  border-radius: 25px;
+  position: relative;
+  color: white;
+  text-align: center;
+  background: #818181;
+  align-self: flex-end;
+}
+
+.sentName p {
+  max-width: 500px;
+  margin-bottom: 4px;
+  line-height: 10px;
+  font-size: 14px;
+  position: relative;
+  color: white;
+  text-align: center;
+  align-self: flex-end;
+  font-weight: bold;
+}
+
+.receivedName p {
+  max-width: 500px;
+  margin-bottom: 4px;
+  line-height: 10px;
+  font-size: 14px;
+  position: relative;
+  color: white;
+  text-align: center;
+  align-self: flex-end;
+  font-weight: bold;
+}
