--- a/src/App.css
+++ b/src/App.css
@@ -77,7 +77,7 @@ form.Chat {
   font-size: 1.5rem;
 }
 
-form button {
+.Chat form button {
   width: 15%;
   margin-bottom: 20px;
 }
@@ -147,7 +147,7 @@ p.Chat {
 .sent p {
   max-width: 500px;
   margin-bottom: 12px;
-  line-height: 10px;
+  line-height: normal;
   padding: 10px 15px;
   border-radius: 25px;
   position: relative;
@@ -159,7 +159,7 @@ p.Chat {
 .received p {
   max-width: 500px;
   margin-bottom: 12px;
-  line-height: 10px;
+  line-height: normal;
   padding: 10px 15px;
   border-radius: 25px;
   position: relative;
